OLMIS-1283 Possibility to add example service to openlmis-blue
So that we can demonstrate how extension points work with blue
